--- a/apprelay/Cargo.toml
+++ b/apprelay/Cargo.toml
@@ -10,7 +10,7 @@ hex = "0.4"
 serde_json = "1.0.82"
 bytes = "1.2.0"
 bhttp = { git = "https://github.com/martinthomson/ohttp", features = ["bhttp", "http"] }
-ohttp = { git = "https://github.com/martinthomson/ohttp", features = ["rust-hpke", "client"], default-features = false }
+ohttp = { git = "https://github.com/chris-wood/ohttp-1", features = ["rust-hpke", "client", "proto-http"], default-features = false, branch = "caw/add-custom-labels" }
 futures = "0.3"
 libc = "0.2"
 
