--- a/apprelay/Cargo.toml
+++ b/apprelay/Cargo.toml
@@ -14,11 +14,19 @@ ohttp = { git = "https://github.com/chris-wood/ohttp-1", features = ["rust-hpke"
 futures = "0.3"
 libc = "0.2"
 
+[dependencies.jni]
+version = "0.19.0"
+optional = true
+
+[features]
+default = ["java"]
+
+java = ["jni"]
+
+
 [target.'cfg(target_family = "unix")'.dependencies]
 nix = "0.23"
 
-[target.'cfg(target_os="android")'.dependencies]
-jni = "0.19.0"
 
 [build-dependencies]
 cbindgen = "0.17"
