--- a/apprelay/Cargo.toml
+++ b/apprelay/Cargo.toml
@@ -2,16 +2,12 @@
 name = "apprelay"
 version = "0.1.0"
 authors = ["Chris Wood <chriswood@cloudflare.com>"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
-base64 = "0.13"
-hex = "0.4"
-serde_json = "1.0.82"
 bytes = "1.2.0"
-bhttp = { git = "https://github.com/martinthomson/ohttp", features = ["bhttp", "http"] }
+#bhttp = { git = "https://github.com/martinthomson/ohttp", features = ["bhttp", "http"] }
 ohttp = { git = "https://github.com/chris-wood/ohttp-1", features = ["rust-hpke", "client", "proto-http"], default-features = false, branch = "caw/add-custom-labels" }
-futures = "0.3"
 libc = "0.2"
 
 [dependencies.jni]
@@ -24,12 +20,8 @@ default = ["java"]
 java = ["jni"]
 
 
-[target.'cfg(target_family = "unix")'.dependencies]
-nix = "0.23"
-
-
 [build-dependencies]
 cbindgen = "0.17"
 
 [lib]
-crate-type = ["lib", "cdylib", "staticlib"]
+crate-type = ["staticlib", "cdylib"]
