--- a/apprelay/Cargo.toml
+++ b/apprelay/Cargo.toml
@@ -10,6 +10,8 @@ bytes = "1.2.0"
 ohttp = { git = "https://github.com/chris-wood/ohttp-1", features = ["rust-hpke", "client", "proto-http"], default-features = false, branch = "caw/add-custom-labels" }
 libc = "0.2"
 
+thiserror = "1.0.32"
+
 [dependencies.jni]
 version = "0.19.0"
 optional = true
