--- a/apprelay/Cargo.toml
+++ b/apprelay/Cargo.toml
@@ -13,6 +13,8 @@ libc = "0.2"
 thiserror = "1.0.32"
 log = "0.4.17"
 
+env_logger = "0.9.0"
+
 [dependencies.jni]
 version = "0.19.0"
 optional = true
