--- a/apprelay/Cargo.toml
+++ b/apprelay/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2021"
 
 [dependencies]
 bytes = "1.2.0"
-#bhttp = { git = "https://github.com/martinthomson/ohttp", features = ["bhttp", "http"] }
-ohttp = { git = "https://github.com/chris-wood/ohttp-1", features = ["rust-hpke", "client", "proto-http"], default-features = false, branch = "caw/add-custom-labels" }
+ohttp = { git = "https://github.com/martinthomson/ohttp", features = ["rust-hpke", "client"], default-features = false }
 libc = "0.2"
 
 thiserror = "1.0.32"
