--- a/apprelay/Cargo.toml
+++ b/apprelay/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 
 [dependencies]
 bytes = "1.2.0"
-ohttp = { git = "https://github.com/martinthomson/ohttp", features = ["rust-hpke", "client"], default-features = false }
+ohttp = { git = "https://github.com/martinthomson/ohttp", features = ["pq", "rust-hpke", "client"], default-features = false }
 libc = "0.2"
 
 thiserror = "1.0.32"
