PXY-1404: use dtolnay's CI action for rust toolchain installation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,12 @@
 
 [workspace]
+resolver = "2"
 
-members = [
-    "apprelay"
-]
-
+members = ["apprelay"]
 
 [profile.release-space-optimized]
 inherits = "release"
-strip = true  # Automatically strip symbols from the binary.
-opt-level = "z"  # Optimize for size.
-lto = true  # Enable link time optimization
-codegen-units = 1  # Reduce parallel code generation units
+strip = true         # Automatically strip symbols from the binary.
+opt-level = "z"      # Optimize for size.
+lto = true           # Enable link time optimization
+codegen-units = 1    # Reduce parallel code generation units
