--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,11 @@
 name: Build and release artifacts
 
 on:
+  pull_request: {}
   push:
-    branches:    
-      - '*'         # matches every branch that doesn't contain a '/'
-    tags:
-      - 'v*'        # matches every tag starting from 'v' 
+    branches:
+      - main
+      - master
 
 jobs:
   build-android-libraries:
@@ -25,18 +25,14 @@ jobs:
           path: artifacts/logcat.log
       - name: checkout
         uses: actions/checkout@v2
+
       - name: rust toolchain setup
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
+          targets: aarch64-linux-android,armv7-linux-androideabi,x86_64-linux-android i686-linux-android
 
       - name: install cargo ndk
-        uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: cargo-ndk
-      - name: setup build targets
-        run: rustup target add aarch64-linux-android armv7-linux-androideabi x86_64-linux-android i686-linux-android
+        run: cargo install cargo-ndk
 
       - name: build all targets
         run: |
@@ -70,14 +66,14 @@ jobs:
           sums="${sums//$'\r'/'%0D'}"
 
           echo ::set-output name=all_jni_libs_sha::"$sums"
- 
+
       - name: Upload android binaries to release
         if: startsWith(github.ref, 'refs/tags/v')
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: target/jniLibs/jniLibs.tar.gz
-          asset_name:  jniLibs.tar.gz
+          asset_name: jniLibs.tar.gz
           tag: ${{ github.ref }}
 
   build-ios-libraries:
@@ -96,9 +92,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
       - name: rust toolchain setup
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
+        uses: dtolnay/rust-toolchain@stable
 
       - name: ensure we have xcode installed
         run: xcrun --show-sdk-build-version
@@ -142,16 +136,16 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: LibAppRelay.xcframework.zip
-          asset_name:  LibAppRelay.xcframework.zip
+          asset_name: LibAppRelay.xcframework.zip
           tag: ${{ github.ref }}
 
   hashes:
     name: Collect Asset Hashes
     runs-on: ubuntu-latest
-    needs: [ build-android-libraries, build-ios-libraries ]
+    needs: [build-android-libraries, build-ios-libraries]
 
     steps:
-      - name: Generate hashes 
+      - name: Generate hashes
         if: startsWith(github.ref, 'refs/tags/v')
         run: |
           echo "${{  needs.build-ios-libraries.outputs.hashes }}" >> hashes.txt
@@ -163,6 +157,6 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: hashes.txt 
-          asset_name:  hashes.txt
+          file: hashes.txt
+          asset_name: hashes.txt
           tag: ${{ github.ref }}
