--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,7 @@ jobs:
 
       - name: build all targets
         run: |
+          cargo ndk-env
           cargo ndk \
             -t armeabi-v7a \
             -t arm64-v8a \
